Add wait parameter in sample config files

--- a/commands.sample2.conf
+++ b/commands.sample2.conf
@@ -1,2 +1,2 @@
-wait,swarm.cs.pub.ro,22,razvan,mkdir test,/dev/null,DUP
-1,swarm.cs.pub.ro,22,razvan,cd test && echo ana,out.txt,/dev/null
+wait,0,swarm.cs.pub.ro,22,razvan,mkdir test,/dev/null,DUP
+wait,1,swarm.cs.pub.ro,22,razvan,cd test && echo ana,out.txt,/dev/null
