--- a/commands.sample3.conf
+++ b/commands.sample3.conf
@@ -1,2 +1,2 @@
-wait,swarm.cs.pub.ro,22,razvan,pkill -f iperf,/dev/null,DUP
-1,swarm.cs.pub.ro,22,razvan,iperf -s,iperf.out,DUP
+wait,0,swarm.cs.pub.ro,22,razvan,pkill -f iperf,/dev/null,DUP
+nowait,1,swarm.cs.pub.ro,22,razvan,iperf -s,iperf.out,DUP
